# clover

./: .deepsource.toml
crates/clover/: Cargo.toml
crates/clover-cli/: Cargo.toml
crates/clover-cli/src/: main.rs
crates/clover-std/: Cargo.toml
crates/clover-std/src/: helper.rs  lib.rs  map.rs  random.rs
crates/clover-std/src/array/: mod.rs
crates/clover-std/src/io/: mod.rs
crates/clover-std/src/lua/: mod.rs
crates/clover-std/src/math/: mod.rs  pow.rs  trigonometric.rs
crates/clover-std/src/net/: mod.rs
crates/clover-std/src/os/: mod.rs
crates/clover/src/: lib.rs
crates/clover/src/backend/: compiler.rs  dependency_solver.rs  function_state.rs
crates/clover/src/frontend/: lexer.rs  parser.rs
crates/clover/src/runtime/: env.rs  iterator.rs  mod.rs  object.rs  object_property.rs  opcode.rs  operation.rs  program.rs  state.rs
crates/clover/tests/: logic.luck  model.luck  string.luck
